# BinarySerializer

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  annotated.html  annotated_dup.js  binarySerializer_8c_source.html  binarySerializer_8h_source.html  classes.html  config_8h.html  config_8h.js  config_8h_source.html  cppcheck-suppressions.txt  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_963e57a8294c229b5ff887c0b5b78922.html  dir_963e57a8294c229b5ff887c0b5b78922.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d7c76e05fc6129d99e7fca25544ee5ad.html  dir_d7c76e05fc6129d99e7fca25544ee5ad.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__Config.html  group__Config.js  index.html  mergeHashTable_8c_source.html  mergeHashTable_8h_source.html  navtreedata.js  (+28 more)
.github/workflows/: check-style.yaml  ci.yaml  docs.yaml  release.yaml
benchmarks/: CMakeLists.txt  main.benchmarks.cpp
cli/app/: CMakeLists.txt  main.c
cli/test/: CMakeLists.txt  app.c  app.h  main.c  testCases.c  testCases.h
cli/utility/: colorFormat.h  timeHelper.c  timeHelper.h
cmake/: compileOptions.cmake
docs/: Doxygen
include/BinarySerializer/: binaryAnalyzer.h  binarySerializer.h  config.h  mergeHashTable.h  statData.h  tableView.h
include/internal/: hashTable.h  tableViewImpl.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  enums_0.js  enumvalues_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_8.js
src/: CMakeLists.txt  binarySerializer.c  hashTable.c  mergeHashTable.c  tableView.c
tests/: CMakeLists.txt
tests/fuzzing/: CMakeLists.txt  main.fuzzing.cpp
tests/unit/: CMakeLists.txt  main.unit.cpp
